add R source encryption

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(htmltools,htmlPreserve)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(knitr,hook_plot_html)
+importFrom(knitr,hooks_html)
 importFrom(knitr,hooks_markdown)
 importFrom(knitr,knit_hooks)
 importFrom(rmarkdown,html_document)
